--- a/index.html
+++ b/index.html
@@ -1,206 +1,107 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ScorePredictor Pro • AI Sports Picks</title>
+  <title>ScorePredictor Pro</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.auth0.com/js/auth0-spa-js/2.1/auth0-spa-js.production.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Inter', sans-serif; }
-    .gradient-bg { background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%); }
-    .card-hover { transition: all 0.3s; }
-    .card-hover:hover { transform: translateY(-8px); box-shadow: 0 20px 40px rgba(0,0,0,0.4); }
+    body { font-family: system-ui, sans-serif; background: #0f172a; color: white; margin:0; min-height:100vh; }
+    .container { max-width: 1200px; margin: 0 auto; padding: 2rem; text-align: center; }
+    h1 { font-size: 4.5rem; background: linear-gradient(to right, #60a5fa, #c084fc); -webkit-background-clip: text; color: transparent; }
+    .btn { padding: 1rem 2.5rem; font-size: 1.5rem; margin: 1rem; border-radius: 1rem; cursor: pointer; font-weight: bold; }
+    .btn-login { background: white; color: black; }
+    .btn-logout { background: #ef4444; }
+    .card { background: #1e293b; padding: 1.5rem; border-radius: 1rem; margin: 1rem; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
+    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem; margin-top: 2rem; }
   </style>
 </head>
-<body class="gradient-bg min-h-screen text-white">
+<body>
+  <div class="container">
+    <h1>ScorePredictor Pro</h1>
+    <p style="font-size:1.8rem; color:#94a3b8;">AI-powered edge on every game</p>
 
-  <div class="container max-w-6xl mx-auto px-4 py-8">
-
-    <header class="text-center py-12">
-      <h1 class="text-5xl md:text-7xl font-bold bg-gradient-to-r from-blue-400 to-purple-600 bg-clip-text text-transparent">
-        ScorePredictor Pro
-      </h1>
-      <p class="text-xl md:text-2xl text-gray-300 mt-4">AI-powered edge on every game</p>
-      <div id="auth-section" class="mt-10 flex flex-col items-center gap-4">
-        <button id="login-btn" class="bg-white text-black hover:bg-gray-100 font-bold text-xl px-10 py-5 rounded-2xl shadow-xl transform hover:scale-105 transition cursor-pointer">
-          Login / Sign Up
-        </button>
-        <div class="text-gray-400">
-          <label><input type="checkbox" id="remember-me" checked class="mr-2">Stay logged in</label>
-        </div>
+    <div id="auth">
+      <button id="login" class="btn btn-login">Login / Sign Up</button>
+      <div style="margin-top:1rem;">
+        <label style="color:#94a3b8;">
+          <input type="checkbox" id="remember" checked> Stay logged in
+        </label>
       </div>
-    </header>
+    </div>
 
-    <section id="featured" class="my-16">
-      <h2 class="text-3xl md:text-4xl font-bold text-center mb-10">Today's Live Matchups</h2>
-      <div id="featured-games" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <div class="bg-slate-800/50 rounded-2xl p-12 text-center animate-pulse">
-          <p class="text-gray-400">Loading today's real games...</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="quick-predictor" class="hidden my-20">
-      <div class="bg-gradient-to-br from-slate-800 to-slate-900 rounded-3xl p-8 md:p-12 shadow-2xl card-hover max-w-4xl mx-auto">
-        <h2 class="text-4xl font-bold text-center mb-10">Get the Edge</h2>
-        <div class="grid md:grid-cols-3 gap-6 mb-8">
-          <select id="league" class="bg-slate-700 rounded-xl px-6 py-4 text-lg">
-            <option>NBA</option><option>NFL</option><option>MLB</option><option>NCAAB</option><option>NCAAF</option><option>NHL</option>
-          </select>
-          <input id="home-team" list="teams-datalist" placeholder="Home Team" class="bg-slate-700 rounded-xl px-6 py-4 text-lg" />
-          <input id="away-team" list="teams-datalist" placeholder="Away Team" class="bg-slate-700 rounded-xl px-6 py-4 text-lg" />
-        </div>
-        <div class="text-center">
-          <button id="predict-btn" class="bg-gradient-to-r from-blue-600 to-purple-700 hover:from-blue-500 hover:to-purple-600 text-2xl font-bold px-14 py-6 rounded-2xl shadow-lg transform hover:scale-105 transition">
-            Get Prediction
-          </button>
-        </div>
-        <div id="result" class="mt-10 hidden bg-black/40 rounded-2xl p-8 text-left">
-          <h3 id="matchup" class="text-3xl font-bold mb-4"></h3>
-          <div class="grid grid-cols-1 md:grid-cols-3 gap-6 text-xl">
-            <div><span class="text-gray-400">Projected Score</span><p id="score" class="text-2xl font-bold text-green-400"></p></div>
-            <div><span class="text-gray-400">Win Probability</span><p id="prob" class="text-2xl font-bold"></p></div>
-            <div><span class="text-gray-400">Edge vs Market</span><p id="edge" class="text-3xl font-bold text-green-400"></p></div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="profile-section" class="hidden text-center py-12">
-      <div class="bg-slate-800/60 backdrop-blur rounded-3xl p-8 inline-block">
-        <p class="text-2xl">Welcome back, <span id="user-name" class="font-bold text-blue-400"></span></p>
-        <p class="text-lg text-gray-300"><span id="user-email"></span></p>
-        <p class="text-xl mt-4">Status: <strong id="sub-status" class="text-green-400">ADMIN – Unlimited Forever</strong></p>
-        <button id="logout-btn" class="mt-6 bg-red-600 hover:bg-red-700 px-8 py-3 rounded-xl font-semibold">Logout</button>
-      </div>
-    </section>
+    <div id="app" class="hidden">
+      <h2>Welcome back, <span id="name" style="color:#60a5fa;"></span>!</h2>
+      <p id="email" style="color:#94a3b8;"></p>
+      <button id="logout" class="btn btn-logout">Logout</button>
+      <h2 style="margin-top:3rem;">Today's Live Games</h2>
+      <div id="games" class="grid"></div>
+    </div>
   </div>
-
-  <datalist id="teams-datalist"></datalist>
 
   <script>
     let auth0 = null;
-    const ADMIN_EMAIL = "theartofwealth123@gmail.com";
 
-    // Initialize Auth0
-    async function initAuth0() {
+    const initAuth0 = async () => {
       auth0 = await createAuth0Client({
         domain: "dev-3cwuyjrqj751y7nr.us.auth0.com",
         client_id: "R8YeJdb0ZGuXY0QLcO1FexwRmCrfpw1w",
         cacheLocation: "localstorage",
         useRefreshTokens: true
       });
-    }
+    };
 
-    // Login handler — attached directly in DOM (never fails)
-    document.addEventListener("DOMContentLoaded", () => {
-      document.getElementById("login-btn").addEventListener("click", async () => {
-        const remember = document.getElementById("remember-me").checked;
-        await auth0.loginWithRedirect({
-          redirect_uri: window.location.origin,
-          prompt: remember ? undefined : "login"
-        });
-      });
-
-      document.getElementById("logout-btn")?.addEventListener("click", () => {
-        localStorage.clear();
-        auth0.logout({ returnTo: window.location.origin });
+    document.getElementById("login").addEventListener("click", () => {
+      const remember = document.getElementById("remember").checked;
+      auth0.loginWithRedirect({
+        redirect_uri: window.location.origin,
+        prompt: remember ? undefined : "login"
       });
     });
 
-    // Load real games
-    async function loadRealFeaturedGames() {
+    document.getElementById("logout").addEventListener("click", () => {
+      auth0.logout({ returnTo: window.location.origin });
+    });
+
+    const loadGames = async () => {
       try {
         const res = await fetch("/.netlify/functions/today-games");
+        if (!res.ok) throw new Error("Failed");
         const games = await res.json();
-        const container = document.getElementById("featured-games");
-        if (!games.length) {
-          container.innerHTML = "<p class='text-center text-gray-500 col-span-full'>No games today</p>";
-          return;
-        }
-        container.innerHTML = games.map(g => `
-          <div class="bg-slate-800/80 backdrop-blur rounded-2xl p-8 text-center card-hover border border-slate-700">
-            <div class="text-sm text-gray-400 uppercase tracking-wider">${g.league}</div>
-            <div class="text-2xl font-bold mt-4">${g.home}</div>
-            <div class="text-4xl my-4 font-black text-gray-500">VS</div>
-            <div class="text-2xl font-bold">${g.away}</div>
-            <div class="mt-6 text-lg text-blue-400">${g.time} • ${g.network || "TBD"}</div>
-            <button onclick="quickPredict('${g.league}','${g.home}','${g.away}')" class="mt-6 bg-gradient-to-r from-purple-600 to-blue-600 hover:from-purple-500 hover:to-blue-500 px-8 py-3 rounded-xl font-bold">
-              Get Edge Now
-            </button>
-          </div>
-        `).join('');
+        const container = document.getElementById("games");
+        container.innerHTML = games.slice(0, 9).map(g => 
+          `<div class="card">
+            <div style="font-size:0.9rem; color:#94a3b8;">${g.league}</div>
+            <div style="font-size:1.8rem; font-weight:bold; margin:0.5rem 0;">${g.home}</div>
+            <div style="font-size:2.5rem; color:#64748b;">VS</div>
+            <div style="font-size:1.8rem; font-weight:bold;">${g.away}</div>
+            <div style="margin-top:0.5rem; color:#60a5fa;">${g.time} • ${g.network || "TBD"}</div>
+          </div>`
+        ).join("");
       } catch (e) {
-        document.getElementById("featured-games").innerHTML = "<p class='text-center text-red-400'>Failed to load games</p>";
+        document.getElementById("games").innerHTML = "<p style='color:#ef4444;'>Games failed to load (check function)</p>";
       }
-    }
+    };
 
-    function quickPredict(league, home, away) {
-      document.getElementById("league").value = league;
-      document.getElementById("home-team").value = home;
-      document.getElementById("away-team").value = away;
-      document.getElementById("predict-btn").click();
-      document.querySelector("#quick-predictor").scrollIntoView({ behavior: "smooth" });
-    }
-
-    // Main init
     window.addEventListener("load", async () => {
       await initAuth0();
 
-      if (location.search.includes("code=") || location.search.includes("error=")) {
+      if (location.search.includes("code=")) {
         await auth0.handleRedirectCallback();
-        window.history.replaceState({}, document.title, "/");
+        window.history.replaceState({}, "", "/");
       }
 
-      const isAuthenticated = await auth0.isAuthenticated();
-      if (isAuthenticated) {
+      const isAuth = await auth0.isAuthenticated();
+      if (isAuth) {
         const user = await auth0.getUser();
-        document.getElementById("auth-section").style.display = "none";
-        document.getElementById("profile-section").classList.remove("hidden");
-        document.getElementById("quick-predictor").classList.remove("hidden");
-        document.getElementById("user-name").textContent = user.name || user.email.split("@")[0];
-        document.getElementById("user-email").textContent = user.email;
-        loadRealFeaturedGames();
-        loadTeamList();
-      } else {
-        loadRealFeaturedGames();
+        document.getElementById("auth").classList.add("hidden");
+        document.getElementById("app").classList.remove("hidden");
+        document.getElementById("name").textContent = user.name || user.email.split("@")[0];
+        document.getElementById("email").textContent = user.email;
+        loadGames();
       }
     });
-
-    // Your existing prediction + team list code
-    function loadTeamList() {
-      fetch('/data/all-teams.json').then(r => r.json()).then(data => {
-        const league = document.getElementById("league").value;
-        const teams = data[league] || [];
-        document.getElementById("teams-datalist").innerHTML = teams.map(t => `<option value="${t}">`).join('');
-      });
-      document.getElementById("league").addEventListener("change", loadTeamList);
-    }
-
-    document.getElementById("predict-btn").onclick = async () => {
-      const league = document.getElementById("league").value;
-      const home = document.getElementById("home-team").value.trim();
-      const away = document.getElementById("away-team").value.trim();
-      if (!home || !away) return alert("Select both teams");
-      const token = await auth0.getTokenSilently();
-      const res = await fetch("/.netlify/functions/predict-matchup", {
-        method: "POST",
-        headers: { "Authorization": `Bearer ${token}`, "Content-Type": "application/json" },
-        body: JSON.stringify({ league, homeTeam: home, awayTeam: away })
-      });
-      const data = await res.json();
-      if (res.ok) {
-        document.getElementById("matchup").textContent = data.matchup;
-        document.getElementById("score").textContent = data.projectedScore;
-        document.getElementById("prob").textContent = `${data.winProbability[home]} vs ${data.winProbability[away]}`;
-        document.getElementById("edge").textContent = data.edgeVsMarket || "No edge";
-        document.getElementById("result").style.display = "block";
-      } else {
-        alert(data.error || "Upgrade required");
-      }
-    };
   </script>
 </body>
 </html>
