--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ScorePredictor Pro</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.auth0.com/js/auth0-spa-js/2.1/auth0-spa-js.production.min.js"></script>
+  <script src="https://cdn.auth0.com/js/auth0-spa-js/2.5/auth0-spa-js.production.js"></script>
+"></script>
   <style>
     body { font-family: system-ui, sans-serif; background: #0f172a; color: white; margin:0; min-height:100vh; display:flex; align-items:center; justify-content:center; }
     .box { text-align:center; padding:3rem; background:#1e293b; border-radius:2rem; box-shadow:0 20px 40px rgba(0,0,0,0.5); max-width:500px; }
